Fixed spacing on product category page.

--- a/themes/inhabitent/sass/_products-category.scss
+++ b/themes/inhabitent/sass/_products-category.scss
@@ -1,6 +1,5 @@
 .tax-product_type {
   .page-title {
-    padding-top: 75px;
     padding-bottom: 20px;
   }
 
