--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -1181,7 +1181,6 @@ i.fa {
   padding-right: 13px; }
 
 .tax-product_type .page-title {
-  padding-top: 75px;
   padding-bottom: 20px; }
 
 .tax-product_type .taxonomy-description p {
